fix #50: fix text wrapping in code block of md viewer

--- a/pwa/src/styles.scss
+++ b/pwa/src/styles.scss
@@ -77,6 +77,7 @@ $kaiten: #8146D3;
 
 .tui-editor-contents,
 .tui-editor-contents blockquote,
+.tui-editor-contents code,
 .tui-editor-contents [data-te-codeblock],
 .simplemde .CodeMirror-wrap pre {
   word-break: break-word;
